# Connect-Four

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main
include/: Board.h  Circle.h
src/: Board.cpp  main.cpp
